<resources>
    <string name="app_name">FinancialManagement</string>

    <!--登陆页面-->
    <string name="app_name_ch">个人理财助手</string>
    <string name="account">账号</string>
    <string name="passwd">密码</string>
    <string name="sign_button">登录</string>
    <string name="login_button">注册</string>
    <string name="wrong_account_tip">账号不存在</string>
    <string name="wrong_passwd_tip">密码错误</string>

    <!--记账详细-->
    <string name="check_financial_details_info">账单信息</string>
    <string name="modify_financial_details_info">修改账单信息</string>
    <string name="add_financial_details_info">记一笔</string>
    <string name="title">主题：</string>
    <string name="input">收入</string>
    <string name="output">支出</string>
    <string name="type">类型：</string>
    <string name="date">时间：</string>
    <string name="money">金额：</string>
    <string name="remarks">备注：</string>
    <string name="date_picker_title">日期</string>
    <string name="picture">添加图片</string>
    <string name="ensure">保存</string>
    <string name="cancel">取消</string>
    <string name="one_more">再来一笔</string>

    <string name="success_tip">保存成功！</string>
    <string name="failure_tip">保存失败！</string>
    <string name="add_more_tip">继续记账吧！</string>

    <!--菜单-->
    <string name="personal_space">个人空间</string>
    <string name="make_det">记一笔</string>
    <string name="stream">流水</string>

    <!--个人中心-->
    <string name="profit_and_loss">盈亏：</string>
    <string name="income_of_month">本月收入：</string>
    <string name="outcome_of_month">本月支出：</string>

    <!--明细页面-->

    <!--错误提示-->
    <string name="invalid_date">日期不能超过今天！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
