<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center"
    android:orientation="vertical"
    tools:ignore="ExtraText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/title_of_make_det"
            android:layout_width="255dp"
            android:layout_height="45dp"
            android:background="@drawable/bg_filter_down"
            android:drawableRight="@drawable/ic_arrows_down"
            android:gravity="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/type"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/in_and_out"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:gravity="fill"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/in"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:checked="false"
                android:text="@string/input"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/out"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:text="@string/output"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/date_of_make_det"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:hint="2018-12-17"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/money_of_make_det"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:hint="0.00"
            android:inputType="numberDecimal"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remarks"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/remarks_of_make_det"
            android:layout_width="260dp"
            android:layout_height="113dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:gravity="center">


        <!--<ImageButton-->
        <!--android:id="@+id/add_image_of_make_det"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:src="@android:drawable/ic_menu_add" />-->

        <ImageView
            android:id="@+id/image_of_make_det"
            android:layout_width="135dp"
            android:layout_height="130dp"
            android:background="@android:drawable/ic_menu_camera" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ensure_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/ensure" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/one_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_more" />
    </LinearLayout>

</LinearLayout>